Move Apkbuilder into sdklib.
Change-Id: I88f7e6101b8c03157a320a6c9d9b7424ffbdc7f5